Bug 73208 - Display corruption after installing driver version 2.99.907
Summary: Display corruption after installing driver version 2.99.907
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-01 20:18 UTC by Simon Munton
Modified: 2014-01-02 15:05 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Screen shot of corruption, desktop effects enabled (32.79 KB, image/png)
2014-01-01 20:18 UTC, Simon Munton
no flags Details
Screen shot of corruption, desktop effects disabled (25.83 KB, image/png)
2014-01-01 20:20 UTC, Simon Munton
no flags Details
Xorg.log (50.62 KB, text/plain)
2014-01-01 20:22 UTC, Simon Munton
no flags Details

Description Simon Munton 2014-01-01 20:18:38 UTC
Created attachment 91399 [details]
Screen shot of corruption, desktop effects enabled

After upgrading intel driver from 2.99.906 to 2.99.907, I see corruption in certain cases, under KDE4.12:
1. With desktop effects enabled, right click on window title bar, popup menu looks like it has transparent background in places
2. With desktop effects disabled, window title bar has black rectangles, and right clicking on title bar, the popup menu has black background in places.

I did a git bisect, and commit 
c79cb18407273dc7798618390bd0b7d69b0f80d6 seems to be responsible. Reverting this commit on 2.99.907 release restores the expected behaviour.
Comment 1 Simon Munton 2014-01-01 20:20:28 UTC
Created attachment 91400 [details]
Screen shot of corruption, desktop effects disabled
Comment 2 Simon Munton 2014-01-01 20:22:05 UTC
Created attachment 91401 [details]
Xorg.log
Comment 3 Chris Wilson 2014-01-02 14:44:25 UTC
Qt graphics system = Native
Comment 4 Chris Wilson 2014-01-02 15:05:27 UTC
commit 4d8f78bc95f8dd36693f74365dbc3c442fbbf8a9
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jan 2 15:01:38 2014 +0000

    sna/gen7+: Emit invalidate between operations if rendering to source/mask
    
    Fixes regression from
    commit c79cb18407273dc7798618390bd0b7d69b0f80d6 [2.99.907]
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Wed Nov 20 11:17:20 2013 +0000
    
        sna/gen7: Try to reduce flushes between primitive continuations
    
    Reported-by: Simon Munton <simon.j.munton@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=73208
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.