src/sna/gen7_render.c
@@ -1114,8 +1114,7 @@ gen7_emit_state(struct sna *sna,
 
 	need_stall = sna->render_state.gen7.surface_table != wm_binding_table;
 
-	need_invalidate = need_stall &&
-		(kgem_bo_is_dirty(op->src.bo) || kgem_bo_is_dirty(op->mask.bo));
+	need_invalidate = kgem_bo_is_dirty(op->src.bo) || kgem_bo_is_dirty(op->mask.bo);
 	if (ALWAYS_INVALIDATE)
 		need_invalidate = true;
 
